updated code and logs

--- a/A2C.ipynb
+++ b/A2C.ipynb
@@ -110,14 +110,22 @@
    "execution_count": 5,
    "source": [
     "reward_type = 'test'    # 'test' or 'train'\n",
-    "epi = [0,10] #[start,end] \n",
+    "epi = [0,100] #[start,end] \n",
     "epi_val = [490,499]\n",
     "\n",
     "\n",
     "gym_env = BeamSelectionEnv(epi, reward_type)\n",
     "gym_env_val = BeamSelectionEnv(epi_val)\n",
     "\n",
-    "n_steps = caviar_tools.linecount(epi)\n",
+    "n_steps_per_epi = []\n",
+    "\n",
+    "for i in range(epi[1]+1):\n",
+    "    n_steps_per_epi.append(caviar_tools.linecount([i, i]))\n",
+    "\n",
+    "for i in range(1, len(n_steps_per_epi)):\n",
+    "    n_steps_per_epi[i] += n_steps_per_epi[i-1]\n",
+    "\n",
+    "n_steps = n_steps_per_epi[-1]\n",
     "n_steps_val = caviar_tools.linecount(epi_val)"
    ],
    "outputs": [
@@ -136,6 +144,23 @@
    "cell_type": "code",
    "execution_count": 6,
    "source": [
+    "print(n_steps, n_steps_per_epi)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "620467 [5344, 11365, 17742, 23731, 30664, 37159, 42834, 49417, 56100, 61631, 68700, 76726, 83551, 88952, 96236, 103283, 109248, 115950, 121070, 127345, 132824, 139727, 145113, 151256, 157889, 164368, 169645, 176780, 183226, 190320, 197209, 203678, 211963, 216948, 222240, 228863, 235674, 239917, 244524, 252034, 258067, 263589, 270233, 276890, 282320, 288431, 294965, 301178, 307362, 312300, 319394, 324723, 329757, 334681, 341477, 347247, 352226, 357315, 363030, 369216, 374960, 381765, 387101, 391713, 399989, 405652, 410761, 417274, 422760, 428344, 435166, 441091, 448448, 454747, 461339, 468010, 473675, 479050, 487094, 494785, 499203, 505371, 512197, 517536, 522514, 529270, 535999, 542054, 547150, 556033, 560952, 565249, 570759, 575509, 581618, 588200, 595867, 601898, 608273, 614894, 620467]\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "source": [
     "n_steps"
    ],
    "outputs": [
@@ -143,11 +168,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "68700"
+       "620467"
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 7
     }
    ],
    "metadata": {}
@@ -170,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "source": [
     "# Transition = namedtuple('Transition',\n",
     "#                         ('state', 'action', 'next_state', 'reward'))\n",
@@ -203,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "source": [
     "class DQN(nn.Module):\n",
     "\n",
@@ -240,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "source": [
     "class Policy():\n",
     "    def __init__(self):\n",
@@ -256,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "source": [
     "policy = Policy()"
    ],
@@ -265,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "source": [
     "tmp = DQN()\n",
     "sample = torch.rand((1,7))\n",
@@ -280,7 +305,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 12
     }
    ],
    "metadata": {}
@@ -294,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "source": [
     "BATCH_SIZE = 128\n",
     "GAMMA = 0.99\n",
@@ -309,7 +334,7 @@
     "# EPS_DECAY = n_steps*0.3\n",
     "\n",
     "TARGET_UPDATE = 1000\n",
-    "VAL_STEP = 30000"
+    "VAL_STEP = 60000"
    ],
    "outputs": [],
    "metadata": {}
@@ -323,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "source": [
     "policy_net = DQN(11, 192).to(device)\n",
     "# target_net = DQN(11, 192).to(device)\n",
@@ -383,10 +408,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "source": [
     "# Tensorboard\n",
-    "log_dir = './mini_logs/policy_grad' \n",
+    "log_dir = './mini_logs/policy_grad_100eps' \n",
     "\n",
     "writer = SummaryWriter(log_dir=log_dir)"
    ],
@@ -402,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "source": [
     "def update_policy(n_step:int):\n",
     "    R = 0\n",
@@ -438,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "source": [
     "# def optimize_model():\n",
     "#     if len(memory) < BATCH_SIZE:\n",
@@ -496,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "source": [
     "def val(train_step:int,gym_env_val:gym.Env,n_steps_val:int=n_steps_val,\n",
     "        writer:SummaryWriter=writer):\n",
@@ -527,10 +552,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "source": [
     "state = torch.zeros((1,11), dtype=torch.float32)\n",
     "ovr_reward = 0.0\n",
+    "episode_cnt = 0\n",
     "for episode in tqdm.tqdm_notebook(range(n_steps),desc='Train'):\n",
     "     # Reset environment and record the starting state\n",
     "    done = False       \n",
@@ -549,8 +575,9 @@
     "    ovr_reward+=reward.item()\n",
     "    \n",
     "\n",
-    "    if (episode + 1)%10==0:\n",
+    "    if episode == n_steps_per_epi[episode_cnt]:\n",
     "        update_policy(episode)\n",
+    "        episode_cnt += 1\n",
     "\n",
     "    if (episode)%VAL_STEP == 0 or (episode == n_steps-1):\n",
     "        val(episode, copy.deepcopy(gym_env_val))\n",
@@ -577,22 +604,21 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "/home/sundesh/Documents/git/ITU-Challenge/torch_rl/lib/python3.6/site-packages/ipykernel_launcher.py:3: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
-      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
-      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+      "ipykernel_launcher:4: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n"
      ]
     },
     {
      "output_type": "display_data",
      "data": {
-      "text/plain": [
-       "Train:   0%|          | 0/68700 [00:00<?, ?it/s]"
-      ],
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "f6c8cae876ee47858169bb5359744e0c"
-      }
+       "model_id": "2e9e273fed7548c9b7d8777d8c128ea6"
+      },
+      "text/plain": [
+       "Train:   0%|          | 0/620467 [00:00<?, ?it/s]"
+      ]
      },
      "metadata": {}
     },
@@ -600,22 +626,21 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "/home/sundesh/Documents/git/ITU-Challenge/torch_rl/lib/python3.6/site-packages/ipykernel_launcher.py:6: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
-      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
-      "  \n"
+      "ipykernel_launcher:6: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n"
      ]
     },
     {
      "output_type": "display_data",
      "data": {
-      "text/plain": [
-       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
-      ],
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "d9ebc9b4413542779d1cfa73c606cf48"
-      }
+       "model_id": "64cf7e1566c94981a42b9ffd791a161d"
+      },
+      "text/plain": [
+       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ]
      },
      "metadata": {}
     },
@@ -623,20 +648,20 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Validation Reward -0.16733134193588364\n"
+      "Validation Reward -0.1682786352155735\n"
      ]
     },
     {
      "output_type": "display_data",
      "data": {
-      "text/plain": [
-       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
-      ],
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "a7e6abca63f24bd5a2792834f2a2bd8b"
-      }
+       "model_id": "b12f178825b942e0ba1182ae87548eb0"
+      },
+      "text/plain": [
+       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ]
      },
      "metadata": {}
     },
@@ -644,20 +669,20 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Validation Reward -0.1673658889273159\n"
+      "Validation Reward -0.16822719491024346\n"
      ]
     },
     {
      "output_type": "display_data",
      "data": {
-      "text/plain": [
-       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
-      ],
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "ffb5614a14ff4a3c8815d84b1454268f"
-      }
+       "model_id": "5cda207b07dc4aa49a272cc6f871285f"
+      },
+      "text/plain": [
+       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ]
      },
      "metadata": {}
     },
@@ -665,20 +690,20 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Validation Reward -0.1672124497354775\n"
+      "Validation Reward -0.1684227573764319\n"
      ]
     },
     {
      "output_type": "display_data",
      "data": {
-      "text/plain": [
-       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
-      ],
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "7b98730a053347acbbbb611c6031fda9"
-      }
+       "model_id": "4c7368eb46d649659d4f487f8357ecbc"
+      },
+      "text/plain": [
+       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ]
      },
      "metadata": {}
     },
@@ -686,8 +711,176 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Validation Reward -0.16717067486864717\n",
-      "Overall Train reward = 0.00. Average Reward = 0.0000\n"
+      "Validation Reward -0.16828759691581568\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "cfe1515d7aaf44949a0fe8384074e6d9"
+      },
+      "text/plain": [
+       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Validation Reward -0.16832741870877593\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "84e439b38fa843ea8f6768d1f74b85bd"
+      },
+      "text/plain": [
+       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Validation Reward -0.16827504763861145\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "03f59d4df03c4d62b927984bf3123d17"
+      },
+      "text/plain": [
+       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Validation Reward -0.16834333305966104\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "da98f3f8a28b4d478edace329abbf663"
+      },
+      "text/plain": [
+       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Validation Reward -0.168297331032007\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "fdb65d28a6ee43718468b8acc60172c8"
+      },
+      "text/plain": [
+       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Validation Reward -0.16836822732076429\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "46eb1b486cd04618881dba41a93cf9bb"
+      },
+      "text/plain": [
+       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Validation Reward -0.16833110534450405\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "94a8a0ff6d504d9b828a83af70d37a81"
+      },
+      "text/plain": [
+       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Validation Reward -0.16838806959793018\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "a8769767608541b98c1561faa30fa571"
+      },
+      "text/plain": [
+       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Validation Reward -0.16833001130811343\n",
+      "Overall Train reward = -103167.13. Average Reward = -0.1663\n"
      ]
     }
    ],
