--- a/A2C.ipynb
+++ b/A2C.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "source": [
     "# {'pkts_dropped': 0.0,\n",
     "#  'pkts_transmitted': 75.0,\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "source": [
     "device = torch.device(\"cpu\")"
    ],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "source": [
     "import caviar_tools\n",
     "from beamselect_env import BeamSelectionEnv"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "source": [
     "reward_type = 'test'    # 'test' or 'train'\n",
     "epi = [0,10] #[start,end] \n",
@@ -128,25 +128,53 @@
     "n_steps = n_steps_per_epi[-1]\n",
     "n_steps_val = caviar_tools.linecount(epi_val)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "/home/mohit/anaconda3/envs/ITU/lib/python3.6/site-packages/gym/logger.py:30: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
+      "  warnings.warn(colorize('%s: %s'%('WARN', msg % args), 'yellow'))\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "source": [
     "print(n_steps, n_steps_per_epi)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "68700 [5344, 11365, 17742, 23731, 30664, 37159, 42834, 49417, 56100, 61631, 68700]\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "source": [
     "n_steps"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "68700"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
    "metadata": {}
   },
   {
@@ -167,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "source": [
     "# Transition = namedtuple('Transition',\n",
     "#                         ('state', 'action', 'next_state', 'reward'))\n",
@@ -200,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "source": [
     "class A2C(nn.Module):\n",
     "\n",
@@ -258,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "source": [
     "SavedAction = namedtuple('SavedAction', ['log_prob', 'value'])"
    ],
@@ -267,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "source": [
     "class Policy():\n",
     "    def __init__(self):\n",
@@ -280,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "source": [
     "policy = Policy()"
    ],
@@ -289,14 +317,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "source": [
     "tmp = A2C()\n",
     "sample = torch.rand((1,7))\n",
     "out = tmp(sample)\n",
     "print(out[0].shape,out[1].shape)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "torch.Size([1, 256]) torch.Size([1, 1])\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -308,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "source": [
     "BATCH_SIZE = 128\n",
     "GAMMA = 0.99\n",
@@ -337,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "source": [
     "policy_net = A2C(11, 192).to(device)\n",
     "\n",
@@ -360,7 +396,7 @@
     "        return action_value\n",
     "    else:\n",
     "        with torch.no_grad():\n",
-    "            action = torch.max(policy_net(state),dim=1)\n",
+    "            action = torch.max(policy_net(state)[0],dim=1)\n",
     "            return action.indices\n"
    ],
    "outputs": [],
@@ -368,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "source": [
     "# Tensorboard\n",
     "log_dir = './mini_logs/AC' \n",
@@ -387,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "source": [
     "def update_policy(n_step:int):\n",
     "\n",
@@ -395,7 +431,7 @@
     "    Training code. Calculates actor and critic loss and performs backprop.\n",
     "    \"\"\"\n",
     "    R = 0\n",
-    "    saved_actions = policy_net.saved_actions\n",
+    "    saved_actions = policy.saved_actions\n",
     "    policy_losses = [] # list to save actor (policy) loss\n",
     "    value_losses = [] # list to save critic (value) loss\n",
     "    returns = [] # list to save the true values\n",
@@ -446,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "source": [
     "def val(train_step:int,gym_env_val:gym.Env,n_steps_val:int=n_steps_val,\n",
     "        writer:SummaryWriter=writer):\n",
@@ -477,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "source": [
     "state = torch.zeros((1,11), dtype=torch.float32)\n",
     "ovr_reward = 0.0\n",
@@ -495,7 +531,7 @@
     "    state = torch.tensor(state)\n",
     "\n",
     "    # Save reward\n",
-    "    policy.reward.append(reward)\n",
+    "    policy.rewards.append(reward)\n",
     "    writer.add_scalar('Rewards',reward.item(),episode)\n",
     "    ovr_reward+=reward.item()\n",
     "    \n",
@@ -504,8 +540,8 @@
     "        update_policy(episode)\n",
     "        episode_cnt += 1\n",
     "\n",
-    "    if (episode)%VAL_STEP == 0 or (episode == n_steps-1):\n",
-    "        val(episode, copy.deepcopy(gym_env_val))\n",
+    "    # if (episode)%VAL_STEP == 0 or (episode == n_steps-1):\n",
+    "    #     val(episode, copy.deepcopy(gym_env_val))\n",
     "\n",
     "\n",
     "writer.add_hparams(\n",
@@ -524,7 +560,43 @@
     "    f'Average Reward = {ovr_reward/n_steps:.4f}')\n",
     "gym_env.close()"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "ipykernel_launcher:4: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "c1bb04cb780b48efb8a3fa6e9eebe83b"
+      },
+      "text/plain": [
+       "Train:   0%|          | 0/68700 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "error",
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-35cf1a71b793>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;31m# Step through environment using chosen action\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mstate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreward\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgym_env\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0maction\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0;36m64\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0maction\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;36m64\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mstate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/mohit/ITU-Challenge/ITU-Challenge/beamselect_env.py\u001b[0m in \u001b[0;36mstep\u001b[0;34m(self, action)\u001b[0m\n\u001b[1;32m     75\u001b[0m             \u001b[0mbs_example_state\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbs_example_reward\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minfo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdone\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcaviar_bs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep_new_reward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     76\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 77\u001b[0;31m             \u001b[0mbs_example_state\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbs_example_reward\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minfo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdone\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcaviar_bs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     78\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbs_example_state\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/mohit/ITU-Challenge/ITU-Challenge/communications/base_station.py\u001b[0m in \u001b[0;36mstep\u001b[0;34m(self, target, action)\u001b[0m\n\u001b[1;32m    126\u001b[0m         \u001b[0mExecutes\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mBS\u001b[0m \u001b[0mchannel\u001b[0m \u001b[0mprocessing\u001b[0m \u001b[0mintegrate\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mUE\u001b[0m \u001b[0mpackets\u001b[0m \u001b[0mprocessing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    127\u001b[0m         \"\"\"\n\u001b[0;32m--> 128\u001b[0;31m                 \u001b[0mpackets\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpackages\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_traffic_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mUEs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpacket_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mUEs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobj_type\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    129\u001b[0m                 \u001b[0mchannel_mag\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mH_mag\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    130\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mBit_rate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchannel_mag\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m440.35\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
