--- a/policy_grad.ipynb
+++ b/policy_grad.ipynb
@@ -604,9 +604,8 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "/home/sundesh/Documents/git/ITU-Challenge/torch_rl/lib/python3.6/site-packages/ipykernel_launcher.py:4: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
-      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
-      "  after removing the cwd from sys.path.\n"
+      "ipykernel_launcher:4: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n"
      ]
     },
     {
@@ -615,7 +614,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "5cf9389b93924ca7aa7d6a3ba283dbcc"
+       "model_id": "09249dd819be4a72873f68b9059b8134"
       },
       "text/plain": [
        "Train:   0%|          | 0/620467 [00:00<?, ?it/s]"
@@ -627,9 +626,8 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "/home/sundesh/Documents/git/ITU-Challenge/torch_rl/lib/python3.6/site-packages/ipykernel_launcher.py:6: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
-      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
-      "  \n"
+      "ipykernel_launcher:6: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n"
      ]
     },
     {
@@ -638,7 +636,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "06ff46e351ea44ab958a388e3f93d78b"
+       "model_id": "09aa00d965ce49f1807387c46b24b4d1"
       },
       "text/plain": [
        "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
@@ -650,7 +648,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Validation Reward -0.17026729373583518\n"
+      "Validation Reward -0.17079125791896235\n"
      ]
     },
     {
@@ -659,7 +657,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "0e01236c8d684dee8ddc6d3bc7f41671"
+       "model_id": "af60da8ccc3041ab817ade3e28713686"
       },
       "text/plain": [
        "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
@@ -671,7 +669,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Validation Reward -0.17017149651771463\n"
+      "Validation Reward -0.1708449652981163\n"
      ]
     },
     {
@@ -680,7 +678,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "87f81cb3d2b24a98b0bda0514b0fde05"
+       "model_id": "872f34643fd043c2b2a356a100d07118"
       },
       "text/plain": [
        "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
@@ -692,7 +690,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Validation Reward -0.1701137661830422\n"
+      "Validation Reward -0.17098358193116162\n"
      ]
     },
     {
@@ -701,7 +699,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "773e4008188c4b52808ad3304d3b7e05"
+       "model_id": "b9f5987b84f84b748756c6b4bb7b7b94"
       },
       "text/plain": [
        "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
@@ -713,7 +711,176 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Validation Reward -0.17030654349764257\n"
+      "Validation Reward -0.1709778936057294\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "ffff70de5ceb447a9f967d9171b1f25e"
+      },
+      "text/plain": [
+       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Validation Reward -0.1708704099330268\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "a1de0cdb453543b2a1e2df6502cfcba7"
+      },
+      "text/plain": [
+       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Validation Reward -0.17096236610780116\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "763846f2f72c48a8ac6f58e6053a3c91"
+      },
+      "text/plain": [
+       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Validation Reward -0.17092067857266674\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "9f65d2a244764b0fb8f29bd73e2d1643"
+      },
+      "text/plain": [
+       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Validation Reward -0.17087394133626027\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "7195b022c6484a5a9f880f0941674f6a"
+      },
+      "text/plain": [
+       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Validation Reward -0.17079034271717267\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "c8826a3dfa224d73b085cf3f4d7dfc55"
+      },
+      "text/plain": [
+       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Validation Reward -0.17089263592592813\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "8cdc54de54b447b19b9bed4f71aa3103"
+      },
+      "text/plain": [
+       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Validation Reward -0.17104590579312243\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "67cec83f47fa4309a90c581ea813e31b"
+      },
+      "text/plain": [
+       "Val:   0%|          | 0/62598 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Validation Reward -0.17081885991130402\n",
+      "Overall Train reward = -105904.69. Average Reward = -0.1707\n"
      ]
     }
    ],
